--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,4 +1,4 @@
-<ion-tabs [color]="isAndroid ? 'royal' : 'primary'">
+<ion-tabs color='secondary'>
   <ion-tab [root]="tab1Root" tabTitle="Senhas" tabIcon="home"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="Notícias" tabIcon="information-circle"></ion-tab>
   <ion-tab [root]="tab3Root" tabTitle="Configuração" tabIcon="settings"></ion-tab>
