--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar [color]="isAndroid ? 'royal' : 'primary'">
+  <ion-navbar color='secondary'>
     <ion-title>
       Configuração
     </ion-title>
