--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -4,20 +4,17 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
-  <ion-navbar [color]="isAndroid ? 'royal' : 'primary'">
-    <ion-title>
-      Entre ou Cadastre-se
-    </ion-title>
-  </ion-navbar>
-</ion-header>
+
 
 <ion-content padding>
-  
-  <ion-list>
+  <div>
+    <img src = '../../assets/imgs/cartorio.png'>
+  </div>
 
-  <ion-item>
-    <ion-label floating>Nome</ion-label>
+
+  <ion-list>
+  <ion-item> 
+    <ion-label floating>Email</ion-label>
     <ion-input type="text" #username></ion-input>
   </ion-item>
 
@@ -29,8 +26,8 @@
 </ion-list>
 
 <div padding>
-  <button block ion-button (click)="signInUser()" item-left>Entrar</button>
-  <button block ion-button (click)="goRegister()" item-left>Cadastre-se</button>
+  <button block ion-button (click)="signInUser()" item-left color = 'secondary'>Entrar</button>
+  <button block ion-button (click)="goRegister()" item-left color = 'secondary'>Cadastre-se</button>
 </div>
 
 </ion-content>
