--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -5,7 +5,7 @@
   Ionic pages and navigation.
 -->
 <ion-header >
-  <ion-navbar [color]="isAndroid ? 'royal' : 'primary'">
+  <ion-navbar color = 'secondary'>
     <ion-title>
       Cadastre-se
     </ion-title>
@@ -29,7 +29,7 @@
 </ion-list>
 
 <div padding>
-  <button block ion-button (click)="registerUser()" item-left>Cadastrar</button>
+  <button block ion-button (click)="registerUser()" item-left color = 'secondary'>Cadastrar</button>
 </div>
 
 </ion-content>
